--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -690,7 +690,8 @@ allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.47.238.82;
 allow 195.47.238.83;
-allow 195.47.238.84;
+allow 195.47.238.86;
+allow 195.47.238.88;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -849,7 +850,6 @@ allow 204.137.14.105;
 allow 204.137.14.106;
 allow 204.137.14.92;
 allow 204.194.29.4;
-allow 204.236.249.126;
 allow 204.8.156.142;
 allow 204.85.191.7;
 allow 204.85.191.8;
@@ -978,7 +978,6 @@ allow 209.141.62.71;
 allow 212.21.66.6;
 allow 212.38.189.186;
 allow 212.69.167.80;
-allow 212.73.134.122;
 allow 212.73.134.204;
 allow 213.252.140.118;
 allow 213.95.149.22;
@@ -1074,7 +1073,6 @@ allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.173.216.67;
 allow 23.184.48.13;
-allow 23.20.95.127;
 allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
 allow 2400:8901::f03c:95ff:fe5d:2041;
@@ -1406,6 +1404,7 @@ allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
 allow 2a02:c204:2220:8710::1;
+allow 2a02:c206:2095:2624::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1455,9 +1454,12 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
+allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
@@ -1806,9 +1808,7 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.135;
-allow 34.229.208.91;
 allow 35.0.127.52;
-allow 35.153.200.105;
 allow 37.114.41.119;
 allow 3.71.175.220;
 allow 37.120.239.59;
@@ -1818,7 +1818,6 @@ allow 37.228.129.128;
 allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.48.120.196;
-allow 3.84.153.203;
 allow 38.6.224.183;
 allow 38.97.116.244;
 allow 45.11.229.132;
@@ -1827,9 +1826,9 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.135.180.27;
 allow 45.137.205.138;
 allow 45.137.205.140;
 allow 45.138.16.107;
@@ -1865,6 +1864,7 @@ allow 45.141.215.97;
 allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.148.17.56;
+allow 45.151.122.34;
 allow 45.15.157.177;
 allow 45.154.98.26;
 allow 45.61.185.172;
@@ -1922,10 +1922,14 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.224;
 allow 5.255.100.227;
+allow 5.255.100.26;
+allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
+allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.244;
@@ -1945,10 +1949,7 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.190;
-allow 52.90.16.210;
 allow 5.34.182.203;
-allow 54.146.16.246;
-allow 54.224.80.123;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1960,7 +1961,6 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 54.88.141.48;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.83.179;
@@ -2103,4 +2103,3 @@ allow 95.211.244.28;
 allow 96.126.98.146;
 allow 96.66.15.152;
 allow 98.128.173.33;
-allow 98.83.134.154;
