--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -434,6 +434,7 @@ deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
 deny 2a02:c204:2220:8710::1;
+deny 2a02:c206:2095:2624::1;
 deny 2a02:c207:3002:8283::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
@@ -483,9 +484,12 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
+deny 2a04:52c0:105:82c0::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
+deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
