--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -37,6 +37,7 @@ set_real_ip_from 104.244.79.44;
 set_real_ip_from 104.244.79.50;
 set_real_ip_from 104.244.79.61;
 set_real_ip_from 107.172.31.218;
+set_real_ip_from 107.173.179.59;
 set_real_ip_from 107.174.138.172;
 set_real_ip_from 107.189.10.175;
 set_real_ip_from 107.189.11.111;
@@ -131,6 +132,7 @@ set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
+set_real_ip_from 137.184.197.55;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.162.249.209;
 set_real_ip_from 139.99.172.11;
@@ -691,7 +693,7 @@ set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.47.238.82;
 set_real_ip_from 195.47.238.83;
 set_real_ip_from 195.47.238.86;
-set_real_ip_from 195.47.238.88;
+set_real_ip_from 195.47.238.87;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.251.84.163;
@@ -1118,6 +1120,7 @@ set_real_ip_from 2604:2dc0:101:200::162b;
 set_real_ip_from 2604:2dc0:101:200::1dd3;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
+set_real_ip_from 2604:a880:400:d0::28:6001;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
@@ -1460,6 +1463,7 @@ set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:119:3f0b::1;
+set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:d285::1;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
@@ -1829,6 +1833,7 @@ set_real_ip_from 45.129.84.246;
 set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.135.180.27;
 set_real_ip_from 45.137.205.138;
 set_real_ip_from 45.137.205.140;
 set_real_ip_from 45.138.16.107;
@@ -1879,6 +1884,7 @@ set_real_ip_from 45.66.35.32;
 set_real_ip_from 45.66.35.33;
 set_real_ip_from 45.66.35.34;
 set_real_ip_from 45.66.35.35;
+set_real_ip_from 45.78.44.215;
 set_real_ip_from 45.79.144.222;
 set_real_ip_from 45.80.158.205;
 set_real_ip_from 45.80.158.23;
@@ -1932,7 +1938,10 @@ set_real_ip_from 5.255.111.64;
 set_real_ip_from 5.255.114.171;
 set_real_ip_from 5.255.115.58;
 set_real_ip_from 5.255.117.56;
+set_real_ip_from 5.255.118.183;
 set_real_ip_from 5.255.118.244;
+set_real_ip_from 5.255.120.205;
+set_real_ip_from 5.255.121.71;
 set_real_ip_from 5.255.123.158;
 set_real_ip_from 5.255.123.164;
 set_real_ip_from 5.255.124.150;
@@ -2007,6 +2016,7 @@ set_real_ip_from 81.17.28.95;
 set_real_ip_from 82.153.138.119;
 set_real_ip_from 8.218.9.41;
 set_real_ip_from 82.221.128.191;
+set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.139.190;
 set_real_ip_from 82.85.247.254;
 set_real_ip_from 83.217.208.120;
