--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -102,7 +102,6 @@ allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
 allow 107.189.8.70;
-allow 107.21.90.49;
 allow 108.181.124.143;
 allow 108.181.16.251;
 allow 108.181.27.205;
@@ -276,7 +275,6 @@ allow 179.43.167.197;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
-allow 18.212.120.129;
 allow 185.100.85.132;
 allow 185.100.85.22;
 allow 185.100.85.23;
@@ -324,6 +322,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
@@ -1403,6 +1402,7 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:da00:f23d:8f00::1;
 allow 2a01:4262:1ab:ffff::133;
+allow 2a01:4f8:222:8c5:ba2d:8c71:db15:171b;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1832,7 +1832,6 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 38.6.224.183;
 allow 38.97.116.244;
-allow 3.91.18.180;
 allow 45.11.229.132;
 allow 45.11.59.28;
 allow 45.118.133.44;
@@ -1967,8 +1966,6 @@ allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.152.123.202;
-allow 54.211.73.49;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1980,7 +1977,6 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 54.88.74.240;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.83.179;
@@ -2037,10 +2033,10 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.252.120.163;
+allow 85.10.210.197;
 allow 85.17.9.83;
 allow 85.239.41.130;
 allow 85.93.218.204;
-allow 86.205.5.107;
 allow 87.118.110.27;
 allow 87.118.116.103;
 allow 87.118.116.12;
