--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -422,6 +422,7 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:da00:f23d:8f00::1;
 allow 2a01:4262:1ab:ffff::133;
+allow 2a01:4f8:222:8c5:ba2d:8c71:db15:171b;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
