--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -992,6 +992,7 @@ allow 37.228.129.128;
 allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.48.120.196;
+allow 37.48.70.156;
 allow 38.6.224.183;
 allow 38.97.116.244;
 allow 45.11.229.132;
@@ -1000,6 +1001,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.180.27;
