Update lists at 20241102-0900

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -195,7 +195,6 @@ allow 154.216.16.13;
 allow 154.216.18.191;
 allow 154.26.159.157;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
@@ -681,6 +680,7 @@ allow 193.239.232.102;
 allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.36.38.17;
+allow 193.70.80.213;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
@@ -1709,6 +1709,7 @@ allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1837,6 +1838,7 @@ allow 45.128.133.242;
 allow 45.129.84.246;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.135.180.27;
 allow 45.137.205.138;
 allow 45.137.205.140;
 allow 45.138.16.107;
@@ -2051,6 +2053,7 @@ allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.185.85.140;
 allow 89.187.143.31;
+allow 89.213.174.212;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.37.95.34;
