--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1079,6 +1079,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
+allow 23.155.8.104;
 allow 23.173.216.67;
 allow 23.184.48.13;
 allow 23.94.211.25;
@@ -1107,6 +1108,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fa4f:202:6f2a:368a:9f7:e371:3ba5;
 allow 2602:fc24:12:4870:39ca:318:0:1;
