--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -130,6 +130,7 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:fa4f:202:6f2a:368a:9f7:e371:3ba5;
 deny 2602:fc24:12:4870:39ca:318:0:1;
