--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1678,6 +1678,7 @@ deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:e701:1198::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
+deny 2a0f:9400:7e11:8ba1::1;
 deny 2a0f:ca80:0:e57f::82e1:3f1b;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
@@ -1800,7 +1801,6 @@ deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.84.246;
-deny 45.129.84.247;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.137.205.138;
@@ -2018,6 +2018,7 @@ deny 89.147.110.82;
 deny 89.147.111.124;
 deny 89.185.85.140;
 deny 89.187.143.31;
+deny 89.213.174.212;
 deny 89.234.157.254;
 deny 89.236.112.100;
 deny 89.37.95.34;
