--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -132,6 +132,7 @@ allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
+allow 13.112.235.199;
 allow 137.184.197.55;
 allow 138.59.18.110;
 allow 139.162.249.209;
@@ -297,7 +298,6 @@ allow 185.107.69.86;
 allow 185.112.144.11;
 allow 185.112.146.167;
 allow 185.113.128.30;
-allow 185.126.117.21;
 allow 185.129.61.1;
 allow 185.129.61.10;
 allow 185.129.61.129;
@@ -400,7 +400,6 @@ allow 185.220.101.162;
 allow 185.220.101.163;
 allow 185.220.101.164;
 allow 185.220.101.165;
-allow 185.220.101.166;
 allow 185.220.101.168;
 allow 185.220.101.169;
 allow 185.220.101.17;
@@ -1074,6 +1073,8 @@ allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2406:8dc0:6005::97f2:9c02;
+allow 2406:da14:57d:3f00:3bdf:e9c0:4a22:b68d;
+allow 2406:da1a:55c:9300:99b9:66db:d7a2:30ea;
 allow 2407:3640:2207:8882::1;
 allow 2407:6ac0:8:1:0:1:1965:6c63;
 allow 2407:cdc0:c004::d44:d46f;
@@ -1542,7 +1543,6 @@ allow 2a0b:f4c2:1::162;
 allow 2a0b:f4c2:1::163;
 allow 2a0b:f4c2:1::164;
 allow 2a0b:f4c2:1::165;
-allow 2a0b:f4c2:1::166;
 allow 2a0b:f4c2:1::168;
 allow 2a0b:f4c2:1::169;
 allow 2a0b:f4c2:1::170;
@@ -1655,7 +1655,6 @@ allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
-allow 2a0d:8140:1fff:34cd::1;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
 allow 2a0d:bbc7:0:1::394;
@@ -1784,6 +1783,7 @@ allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.135;
 allow 35.0.127.52;
+allow 35.154.241.132;
 allow 37.114.41.119;
 allow 3.71.175.220;
 allow 37.120.239.59;
@@ -1981,7 +1981,6 @@ allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.82.78.14;
-allow 80.94.92.106;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.153.138.119;
