--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -132,6 +132,7 @@ deny 128.127.180.156;
 deny 128.31.0.13;
 deny 130.193.10.21;
 deny 130.193.15.186;
+deny 13.112.235.199;
 deny 137.184.197.55;
 deny 138.59.18.110;
 deny 139.162.249.209;
@@ -297,7 +298,6 @@ deny 185.107.69.86;
 deny 185.112.144.11;
 deny 185.112.146.167;
 deny 185.113.128.30;
-deny 185.126.117.21;
 deny 185.129.61.1;
 deny 185.129.61.10;
 deny 185.129.61.129;
@@ -400,7 +400,6 @@ deny 185.220.101.162;
 deny 185.220.101.163;
 deny 185.220.101.164;
 deny 185.220.101.165;
-deny 185.220.101.166;
 deny 185.220.101.168;
 deny 185.220.101.169;
 deny 185.220.101.17;
@@ -1074,6 +1073,8 @@ deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8000:239::;
 deny 2402:1f00:8100:400::9;
 deny 2406:8dc0:6005::97f2:9c02;
+deny 2406:da14:57d:3f00:3bdf:e9c0:4a22:b68d;
+deny 2406:da1a:55c:9300:99b9:66db:d7a2:30ea;
 deny 2407:3640:2207:8882::1;
 deny 2407:6ac0:8:1:0:1:1965:6c63;
 deny 2407:cdc0:c004::d44:d46f;
@@ -1542,7 +1543,6 @@ deny 2a0b:f4c2:1::162;
 deny 2a0b:f4c2:1::163;
 deny 2a0b:f4c2:1::164;
 deny 2a0b:f4c2:1::165;
-deny 2a0b:f4c2:1::166;
 deny 2a0b:f4c2:1::168;
 deny 2a0b:f4c2:1::169;
 deny 2a0b:f4c2:1::170;
@@ -1655,7 +1655,6 @@ deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
-deny 2a0d:8140:1fff:34cd::1;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
 deny 2a0d:bbc7:0:1::394;
@@ -1784,6 +1783,7 @@ deny 31.133.0.210;
 deny 31.220.75.237;
 deny 31.42.185.135;
 deny 35.0.127.52;
+deny 35.154.241.132;
 deny 37.114.41.119;
 deny 3.71.175.220;
 deny 37.120.239.59;
@@ -1981,7 +1981,6 @@ deny 80.241.60.207;
 deny 80.67.167.81;
 deny 80.67.172.162;
 deny 80.82.78.14;
-deny 80.94.92.106;
 deny 81.16.33.42;
 deny 81.17.28.95;
 deny 82.153.138.119;
