--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -119,6 +119,8 @@ deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8000:239::;
 deny 2402:1f00:8100:400::9;
 deny 2406:8dc0:6005::97f2:9c02;
+deny 2406:da14:57d:3f00:3bdf:e9c0:4a22:b68d;
+deny 2406:da1a:55c:9300:99b9:66db:d7a2:30ea;
 deny 2407:3640:2207:8882::1;
 deny 2407:6ac0:8:1:0:1:1965:6c63;
 deny 2407:cdc0:c004::d44:d46f;
@@ -579,7 +581,6 @@ deny 2a0b:f4c2:1::162;
 deny 2a0b:f4c2:1::163;
 deny 2a0b:f4c2:1::164;
 deny 2a0b:f4c2:1::165;
-deny 2a0b:f4c2:1::166;
 deny 2a0b:f4c2:1::168;
 deny 2a0b:f4c2:1::169;
 deny 2a0b:f4c2:1::170;
@@ -692,7 +693,6 @@ deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
-deny 2a0d:8140:1fff:34cd::1;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
 deny 2a0d:bbc7:0:1::394;
