--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -132,6 +132,7 @@ set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
+set_real_ip_from 13.112.235.199;
 set_real_ip_from 137.184.197.55;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.162.249.209;
@@ -297,7 +298,6 @@ set_real_ip_from 185.107.69.86;
 set_real_ip_from 185.112.144.11;
 set_real_ip_from 185.112.146.167;
 set_real_ip_from 185.113.128.30;
-set_real_ip_from 185.126.117.21;
 set_real_ip_from 185.129.61.1;
 set_real_ip_from 185.129.61.10;
 set_real_ip_from 185.129.61.129;
@@ -400,7 +400,6 @@ set_real_ip_from 185.220.101.162;
 set_real_ip_from 185.220.101.163;
 set_real_ip_from 185.220.101.164;
 set_real_ip_from 185.220.101.165;
-set_real_ip_from 185.220.101.166;
 set_real_ip_from 185.220.101.168;
 set_real_ip_from 185.220.101.169;
 set_real_ip_from 185.220.101.17;
@@ -1074,6 +1073,8 @@ set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2406:8dc0:6005::97f2:9c02;
+set_real_ip_from 2406:da14:57d:3f00:3bdf:e9c0:4a22:b68d;
+set_real_ip_from 2406:da1a:55c:9300:99b9:66db:d7a2:30ea;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:6ac0:8:1:0:1:1965:6c63;
 set_real_ip_from 2407:cdc0:c004::d44:d46f;
@@ -1542,7 +1543,6 @@ set_real_ip_from 2a0b:f4c2:1::162;
 set_real_ip_from 2a0b:f4c2:1::163;
 set_real_ip_from 2a0b:f4c2:1::164;
 set_real_ip_from 2a0b:f4c2:1::165;
-set_real_ip_from 2a0b:f4c2:1::166;
 set_real_ip_from 2a0b:f4c2:1::168;
 set_real_ip_from 2a0b:f4c2:1::169;
 set_real_ip_from 2a0b:f4c2:1::170;
@@ -1655,7 +1655,6 @@ set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
-set_real_ip_from 2a0d:8140:1fff:34cd::1;
 set_real_ip_from 2a0d:bbc7:0:1::254;
 set_real_ip_from 2a0d:bbc7:0:1::320;
 set_real_ip_from 2a0d:bbc7:0:1::394;
@@ -1784,6 +1783,7 @@ set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.42.185.135;
 set_real_ip_from 35.0.127.52;
+set_real_ip_from 35.154.241.132;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 3.71.175.220;
 set_real_ip_from 37.120.239.59;
@@ -1981,7 +1981,6 @@ set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
 set_real_ip_from 80.82.78.14;
-set_real_ip_from 80.94.92.106;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 82.153.138.119;
