--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -119,6 +119,8 @@ set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2406:8dc0:6005::97f2:9c02;
+set_real_ip_from 2406:da14:57d:3f00:3bdf:e9c0:4a22:b68d;
+set_real_ip_from 2406:da1a:55c:9300:99b9:66db:d7a2:30ea;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:6ac0:8:1:0:1:1965:6c63;
 set_real_ip_from 2407:cdc0:c004::d44:d46f;
@@ -579,7 +581,6 @@ set_real_ip_from 2a0b:f4c2:1::162;
 set_real_ip_from 2a0b:f4c2:1::163;
 set_real_ip_from 2a0b:f4c2:1::164;
 set_real_ip_from 2a0b:f4c2:1::165;
-set_real_ip_from 2a0b:f4c2:1::166;
 set_real_ip_from 2a0b:f4c2:1::168;
 set_real_ip_from 2a0b:f4c2:1::169;
 set_real_ip_from 2a0b:f4c2:1::170;
@@ -692,7 +693,6 @@ set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
-set_real_ip_from 2a0d:8140:1fff:34cd::1;
 set_real_ip_from 2a0d:bbc7:0:1::254;
 set_real_ip_from 2a0d:bbc7:0:1::320;
 set_real_ip_from 2a0d:bbc7:0:1::394;
