Update lists at 20241104-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -257,6 +257,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
+allow 179.35.13.19;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -273,17 +274,9 @@ allow 179.43.182.58;
 allow 180.150.226.99;
 allow 184.75.221.195;
 allow 185.100.85.132;
-allow 185.100.85.22;
-allow 185.100.85.23;
-allow 185.100.85.24;
-allow 185.100.85.25;
 allow 185.100.87.136;
-allow 185.100.87.139;
 allow 185.100.87.166;
 allow 185.100.87.174;
-allow 185.100.87.192;
-allow 185.100.87.250;
-allow 185.100.87.253;
 allow 185.100.87.41;
 allow 185.10.16.41;
 allow 185.106.102.102;
@@ -357,14 +350,8 @@ allow 185.220.100.252;
 allow 185.220.100.253;
 allow 185.220.100.254;
 allow 185.220.100.255;
-allow 185.220.101.0;
-allow 185.220.101.1;
-allow 185.220.101.10;
-allow 185.220.101.11;
-allow 185.220.101.12;
 allow 185.220.101.128;
 allow 185.220.101.129;
-allow 185.220.101.13;
 allow 185.220.101.130;
 allow 185.220.101.131;
 allow 185.220.101.132;
@@ -374,7 +361,6 @@ allow 185.220.101.136;
 allow 185.220.101.137;
 allow 185.220.101.138;
 allow 185.220.101.139;
-allow 185.220.101.14;
 allow 185.220.101.140;
 allow 185.220.101.141;
 allow 185.220.101.142;
@@ -384,7 +370,6 @@ allow 185.220.101.146;
 allow 185.220.101.147;
 allow 185.220.101.148;
 allow 185.220.101.149;
-allow 185.220.101.15;
 allow 185.220.101.150;
 allow 185.220.101.151;
 allow 185.220.101.154;
@@ -392,7 +377,6 @@ allow 185.220.101.155;
 allow 185.220.101.156;
 allow 185.220.101.157;
 allow 185.220.101.158;
-allow 185.220.101.16;
 allow 185.220.101.161;
 allow 185.220.101.162;
 allow 185.220.101.163;
@@ -400,7 +384,6 @@ allow 185.220.101.164;
 allow 185.220.101.165;
 allow 185.220.101.168;
 allow 185.220.101.169;
-allow 185.220.101.17;
 allow 185.220.101.170;
 allow 185.220.101.171;
 allow 185.220.101.172;
@@ -411,7 +394,6 @@ allow 185.220.101.176;
 allow 185.220.101.177;
 allow 185.220.101.178;
 allow 185.220.101.179;
-allow 185.220.101.18;
 allow 185.220.101.180;
 allow 185.220.101.182;
 allow 185.220.101.183;
@@ -421,23 +403,8 @@ allow 185.220.101.186;
 allow 185.220.101.187;
 allow 185.220.101.188;
 allow 185.220.101.189;
-allow 185.220.101.19;
 allow 185.220.101.190;
 allow 185.220.101.191;
-allow 185.220.101.2;
-allow 185.220.101.20;
-allow 185.220.101.21;
-allow 185.220.101.22;
-allow 185.220.101.23;
-allow 185.220.101.24;
-allow 185.220.101.25;
-allow 185.220.101.26;
-allow 185.220.101.27;
-allow 185.220.101.28;
-allow 185.220.101.29;
-allow 185.220.101.3;
-allow 185.220.101.30;
-allow 185.220.101.31;
 allow 185.220.101.32;
 allow 185.220.101.33;
 allow 185.220.101.34;
@@ -446,7 +413,6 @@ allow 185.220.101.36;
 allow 185.220.101.37;
 allow 185.220.101.38;
 allow 185.220.101.39;
-allow 185.220.101.4;
 allow 185.220.101.40;
 allow 185.220.101.41;
 allow 185.220.101.42;
@@ -457,7 +423,6 @@ allow 185.220.101.46;
 allow 185.220.101.47;
 allow 185.220.101.48;
 allow 185.220.101.49;
-allow 185.220.101.5;
 allow 185.220.101.50;
 allow 185.220.101.51;
 allow 185.220.101.52;
@@ -468,7 +433,6 @@ allow 185.220.101.56;
 allow 185.220.101.57;
 allow 185.220.101.58;
 allow 185.220.101.59;
-allow 185.220.101.6;
 allow 185.220.101.60;
 allow 185.220.101.61;
 allow 185.220.101.62;
@@ -479,7 +443,6 @@ allow 185.220.101.66;
 allow 185.220.101.67;
 allow 185.220.101.68;
 allow 185.220.101.69;
-allow 185.220.101.7;
 allow 185.220.101.70;
 allow 185.220.101.71;
 allow 185.220.101.72;
@@ -490,7 +453,6 @@ allow 185.220.101.76;
 allow 185.220.101.77;
 allow 185.220.101.78;
 allow 185.220.101.79;
-allow 185.220.101.8;
 allow 185.220.101.80;
 allow 185.220.101.81;
 allow 185.220.101.82;
@@ -501,7 +463,6 @@ allow 185.220.101.86;
 allow 185.220.101.87;
 allow 185.220.101.88;
 allow 185.220.101.89;
-allow 185.220.101.9;
 allow 185.220.101.90;
 allow 185.220.103.4;
 allow 185.220.103.5;
@@ -521,6 +482,7 @@ allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
 allow 185.241.208.232;
+allow 185.241.208.236;
 allow 185.241.208.243;
 allow 185.241.208.54;
 allow 185.241.208.71;
@@ -1032,6 +994,7 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
+allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -1466,14 +1429,6 @@ allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:d014:473:7300:2d80:1fad:add2:7a9d;
 allow 2a06:1280:bee1:2::ee12:230;
-allow 2a06:1700:0:12::1;
-allow 2a06:1700:0:12::2;
-allow 2a06:1700:0:12::3;
-allow 2a06:1700:0:12::4;
-allow 2a06:1700:0:15::1;
-allow 2a06:1700:0:15::2;
-allow 2a06:1700:0:15::3;
-allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
@@ -1504,10 +1459,6 @@ allow 2a0b:f4c0:16c:6::1;
 allow 2a0b:f4c0:16c:7::1;
 allow 2a0b:f4c0:16c:8::1;
 allow 2a0b:f4c0:16c:9::1;
-allow 2a0b:f4c2::;
-allow 2a0b:f4c2::1;
-allow 2a0b:f4c2::10;
-allow 2a0b:f4c2::11;
 allow 2a0b:f4c2:1::128;
 allow 2a0b:f4c2:1::129;
 allow 2a0b:f4c2:1::130;
@@ -1561,19 +1512,6 @@ allow 2a0b:f4c2:1::188;
 allow 2a0b:f4c2:1::189;
 allow 2a0b:f4c2:1::190;
 allow 2a0b:f4c2:1::191;
-allow 2a0b:f4c2::12;
-allow 2a0b:f4c2::13;
-allow 2a0b:f4c2::14;
-allow 2a0b:f4c2::15;
-allow 2a0b:f4c2::16;
-allow 2a0b:f4c2::17;
-allow 2a0b:f4c2::18;
-allow 2a0b:f4c2::19;
-allow 2a0b:f4c2::2;
-allow 2a0b:f4c2::20;
-allow 2a0b:f4c2::21;
-allow 2a0b:f4c2::22;
-allow 2a0b:f4c2::23;
 allow 2a0b:f4c2:2::32;
 allow 2a0b:f4c2:2::33;
 allow 2a0b:f4c2:2::34;
@@ -1582,7 +1520,6 @@ allow 2a0b:f4c2:2::36;
 allow 2a0b:f4c2:2::37;
 allow 2a0b:f4c2:2::38;
 allow 2a0b:f4c2:2::39;
-allow 2a0b:f4c2::24;
 allow 2a0b:f4c2:2::40;
 allow 2a0b:f4c2:2::41;
 allow 2a0b:f4c2:2::42;
@@ -1593,7 +1530,6 @@ allow 2a0b:f4c2:2::46;
 allow 2a0b:f4c2:2::47;
 allow 2a0b:f4c2:2::48;
 allow 2a0b:f4c2:2::49;
-allow 2a0b:f4c2::25;
 allow 2a0b:f4c2:2::50;
 allow 2a0b:f4c2:2::51;
 allow 2a0b:f4c2:2::52;
@@ -1604,17 +1540,10 @@ allow 2a0b:f4c2:2::56;
 allow 2a0b:f4c2:2::57;
 allow 2a0b:f4c2:2::58;
 allow 2a0b:f4c2:2::59;
-allow 2a0b:f4c2::26;
 allow 2a0b:f4c2:2::60;
 allow 2a0b:f4c2:2::61;
 allow 2a0b:f4c2:2::62;
 allow 2a0b:f4c2:2::63;
-allow 2a0b:f4c2::27;
-allow 2a0b:f4c2::28;
-allow 2a0b:f4c2::29;
-allow 2a0b:f4c2::3;
-allow 2a0b:f4c2::30;
-allow 2a0b:f4c2::31;
 allow 2a0b:f4c2:3::64;
 allow 2a0b:f4c2:3::65;
 allow 2a0b:f4c2:3::66;
@@ -1642,12 +1571,6 @@ allow 2a0b:f4c2:3::87;
 allow 2a0b:f4c2:3::88;
 allow 2a0b:f4c2:3::89;
 allow 2a0b:f4c2:3::90;
-allow 2a0b:f4c2::4;
-allow 2a0b:f4c2::5;
-allow 2a0b:f4c2::6;
-allow 2a0b:f4c2::7;
-allow 2a0b:f4c2::8;
-allow 2a0b:f4c2::9;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
@@ -1665,6 +1588,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:4005:1002:ffff:185:40:4:94;
 allow 2a0e:4005:1002:ffff:185:40:4:95;
+allow 2a0e:97c0:3e3:50b::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:b107:dd0::3:fa35:9316;
@@ -1711,6 +1635,7 @@ allow 2a12:a800:2:1:185:241:208:202;
 allow 2a12:a800:2:1:185:241:208:204;
 allow 2a12:a800:2:1:185:241:208:206;
 allow 2a12:a800:2:1:185:241:208:232;
+allow 2a12:a800:2:1:185:241:208:236;
 allow 2a12:a800:2:1:185:241:208:243;
 allow 2a12:a800:2:1:185:241:208:71;
 allow 2a12:a800:2:1:185:241:208:81;
@@ -1795,7 +1720,6 @@ allow 45.129.84.246;
 allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.135.180.27;
 allow 45.137.205.138;
 allow 45.137.205.140;
 allow 45.138.16.107;
@@ -1895,7 +1819,6 @@ allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1951,6 +1874,7 @@ allow 72.211.49.235;
 allow 72.235.129.116;
 allow 74.82.47.194;
 allow 77.105.146.42;
+allow 77.220.196.253;
 allow 77.221.142.194;
 allow 77.221.152.105;
 allow 77.221.157.237;
