--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -506,14 +506,6 @@ deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:d014:473:7300:2d80:1fad:add2:7a9d;
 deny 2a06:1280:bee1:2::ee12:230;
-deny 2a06:1700:0:12::1;
-deny 2a06:1700:0:12::2;
-deny 2a06:1700:0:12::3;
-deny 2a06:1700:0:12::4;
-deny 2a06:1700:0:15::1;
-deny 2a06:1700:0:15::2;
-deny 2a06:1700:0:15::3;
-deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
@@ -544,10 +536,6 @@ deny 2a0b:f4c0:16c:6::1;
 deny 2a0b:f4c0:16c:7::1;
 deny 2a0b:f4c0:16c:8::1;
 deny 2a0b:f4c0:16c:9::1;
-deny 2a0b:f4c2::;
-deny 2a0b:f4c2::1;
-deny 2a0b:f4c2::10;
-deny 2a0b:f4c2::11;
 deny 2a0b:f4c2:1::128;
 deny 2a0b:f4c2:1::129;
 deny 2a0b:f4c2:1::130;
@@ -601,19 +589,6 @@ deny 2a0b:f4c2:1::188;
 deny 2a0b:f4c2:1::189;
 deny 2a0b:f4c2:1::190;
 deny 2a0b:f4c2:1::191;
-deny 2a0b:f4c2::12;
-deny 2a0b:f4c2::13;
-deny 2a0b:f4c2::14;
-deny 2a0b:f4c2::15;
-deny 2a0b:f4c2::16;
-deny 2a0b:f4c2::17;
-deny 2a0b:f4c2::18;
-deny 2a0b:f4c2::19;
-deny 2a0b:f4c2::2;
-deny 2a0b:f4c2::20;
-deny 2a0b:f4c2::21;
-deny 2a0b:f4c2::22;
-deny 2a0b:f4c2::23;
 deny 2a0b:f4c2:2::32;
 deny 2a0b:f4c2:2::33;
 deny 2a0b:f4c2:2::34;
@@ -622,7 +597,6 @@ deny 2a0b:f4c2:2::36;
 deny 2a0b:f4c2:2::37;
 deny 2a0b:f4c2:2::38;
 deny 2a0b:f4c2:2::39;
-deny 2a0b:f4c2::24;
 deny 2a0b:f4c2:2::40;
 deny 2a0b:f4c2:2::41;
 deny 2a0b:f4c2:2::42;
@@ -633,7 +607,6 @@ deny 2a0b:f4c2:2::46;
 deny 2a0b:f4c2:2::47;
 deny 2a0b:f4c2:2::48;
 deny 2a0b:f4c2:2::49;
-deny 2a0b:f4c2::25;
 deny 2a0b:f4c2:2::50;
 deny 2a0b:f4c2:2::51;
 deny 2a0b:f4c2:2::52;
@@ -644,17 +617,10 @@ deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
 deny 2a0b:f4c2:2::58;
 deny 2a0b:f4c2:2::59;
-deny 2a0b:f4c2::26;
 deny 2a0b:f4c2:2::60;
 deny 2a0b:f4c2:2::61;
 deny 2a0b:f4c2:2::62;
 deny 2a0b:f4c2:2::63;
-deny 2a0b:f4c2::27;
-deny 2a0b:f4c2::28;
-deny 2a0b:f4c2::29;
-deny 2a0b:f4c2::3;
-deny 2a0b:f4c2::30;
-deny 2a0b:f4c2::31;
 deny 2a0b:f4c2:3::64;
 deny 2a0b:f4c2:3::65;
 deny 2a0b:f4c2:3::66;
@@ -682,12 +648,6 @@ deny 2a0b:f4c2:3::87;
 deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
-deny 2a0b:f4c2::4;
-deny 2a0b:f4c2::5;
-deny 2a0b:f4c2::6;
-deny 2a0b:f4c2::7;
-deny 2a0b:f4c2::8;
-deny 2a0b:f4c2::9;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:bbc7:0:1::254;
@@ -705,6 +665,7 @@ deny 2a0e:4005:1002:ffff:185:40:4:64;
 deny 2a0e:4005:1002:ffff:185:40:4:92;
 deny 2a0e:4005:1002:ffff:185:40:4:94;
 deny 2a0e:4005:1002:ffff:185:40:4:95;
+deny 2a0e:97c0:3e3:50b::1;
 deny 2a0e:97c0:3ea:bc::1;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:b107:dd0::3:fa35:9316;
@@ -751,6 +712,7 @@ deny 2a12:a800:2:1:185:241:208:202;
 deny 2a12:a800:2:1:185:241:208:204;
 deny 2a12:a800:2:1:185:241:208:206;
 deny 2a12:a800:2:1:185:241:208:232;
+deny 2a12:a800:2:1:185:241:208:236;
 deny 2a12:a800:2:1:185:241:208:243;
 deny 2a12:a800:2:1:185:241:208:71;
 deny 2a12:a800:2:1:185:241:208:81;
