Update lists at 20241104-1200

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -194,6 +194,7 @@ deny 154.216.18.191;
 deny 154.26.159.157;
 deny 158.69.1.13;
 deny 160.119.249.240;
+deny 161.35.129.51;
 deny 161.97.174.64;
 deny 162.210.173.17;
 deny 162.216.18.62;
@@ -243,7 +244,6 @@ deny 176.58.89.182;
 deny 176.97.114.182;
 deny 176.97.114.202;
 deny 178.17.170.144;
-deny 178.17.170.223;
 deny 178.17.170.23;
 deny 178.17.171.102;
 deny 178.17.174.14;
@@ -612,6 +612,7 @@ deny 193.189.100.206;
 deny 193.218.118.133;
 deny 193.218.118.137;
 deny 193.218.118.155;
+deny 193.218.118.173;
 deny 193.218.118.178;
 deny 193.218.118.182;
 deny 193.218.118.188;
@@ -635,6 +636,7 @@ deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
 deny 195.179.231.215;
+deny 195.179.231.32;
 deny 195.47.238.82;
 deny 195.47.238.83;
 deny 195.47.238.84;
@@ -998,6 +1000,7 @@ deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
 deny 23.154.177.14;
+deny 23.154.177.15;
 deny 23.154.177.16;
 deny 23.154.177.17;
 deny 23.154.177.18;
@@ -1021,6 +1024,7 @@ deny 23.154.177.5;
 deny 23.154.177.6;
 deny 23.154.177.7;
 deny 23.154.177.8;
+deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.8.104;
 deny 23.173.216.67;
@@ -1339,7 +1343,6 @@ deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
-deny 2a00:1dc0:caff:83::a43b;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:da00:f23d:8f00::1;
@@ -1613,6 +1616,7 @@ deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
+deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
@@ -1722,6 +1726,7 @@ deny 45.129.84.246;
 deny 45.129.84.247;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.135.180.27;
 deny 45.137.205.138;
 deny 45.137.205.140;
 deny 45.138.16.107;
@@ -1783,7 +1788,6 @@ deny 45.83.104.137;
 deny 45.84.107.182;
 deny 45.84.107.198;
 deny 45.84.107.76;
-deny 45.94.31.180;
 deny 45.94.31.68;
 deny 45.95.169.130;
 deny 45.95.169.223;
