--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -194,6 +194,7 @@ allow 154.216.18.191;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 161.97.174.64;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -243,7 +244,6 @@ allow 176.58.89.182;
 allow 176.97.114.182;
 allow 176.97.114.202;
 allow 178.17.170.144;
-allow 178.17.170.223;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -612,6 +612,7 @@ allow 193.189.100.206;
 allow 193.218.118.133;
 allow 193.218.118.137;
 allow 193.218.118.155;
+allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
 allow 193.218.118.188;
@@ -635,6 +636,7 @@ allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.179.231.215;
+allow 195.179.231.32;
 allow 195.47.238.82;
 allow 195.47.238.83;
 allow 195.47.238.84;
@@ -998,6 +1000,7 @@ allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
+allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
@@ -1021,6 +1024,7 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.173.216.67;
@@ -1339,7 +1343,6 @@ allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
-allow 2a00:1dc0:caff:83::a43b;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:da00:f23d:8f00::1;
@@ -1613,6 +1616,7 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
+allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
@@ -1722,6 +1726,7 @@ allow 45.129.84.246;
 allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.135.180.27;
 allow 45.137.205.138;
 allow 45.137.205.140;
 allow 45.138.16.107;
@@ -1783,7 +1788,6 @@ allow 45.83.104.137;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
-allow 45.94.31.180;
 allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.223;
