--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -160,6 +160,7 @@ allow 151.80.148.159;
 allow 15.204.238.148;
 allow 152.70.89.255;
 allow 154.16.116.61;
+allow 154.213.184.100;
 allow 154.213.184.105;
 allow 154.213.184.111;
 allow 154.213.184.120;
@@ -167,6 +168,7 @@ allow 154.213.184.13;
 allow 154.213.184.131;
 allow 154.213.184.17;
 allow 154.213.184.21;
+allow 154.213.184.35;
 allow 154.213.184.39;
 allow 154.213.184.42;
 allow 154.213.184.44;
@@ -189,12 +191,12 @@ allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.216.16.13;
+allow 154.216.16.20;
 allow 154.216.16.21;
 allow 154.216.18.191;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 161.97.174.64;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -235,6 +237,7 @@ allow 172.81.131.156;
 allow 172.81.132.94;
 allow 173.249.57.253;
 allow 173.255.198.243;
+allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.126.253.190;
@@ -482,8 +485,6 @@ allow 185.241.208.196;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
-allow 185.241.208.232;
-allow 185.241.208.236;
 allow 185.241.208.243;
 allow 185.241.208.54;
 allow 185.241.208.71;
@@ -1446,6 +1447,7 @@ allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 allow 2a0b:4140:c333::2;
+allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1598,7 +1600,6 @@ allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
-allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1639,8 +1640,6 @@ allow 2a12:a800:2:1:185:241:208:115;
 allow 2a12:a800:2:1:185:241:208:202;
 allow 2a12:a800:2:1:185:241:208:204;
 allow 2a12:a800:2:1:185:241:208:206;
-allow 2a12:a800:2:1:185:241:208:232;
-allow 2a12:a800:2:1:185:241:208:236;
 allow 2a12:a800:2:1:185:241:208:243;
 allow 2a12:a800:2:1:185:241:208:71;
 allow 2a12:a800:2:1:185:241:208:81;
@@ -1698,6 +1697,8 @@ allow 2a12:dd47:8513::8;
 allow 2a12:dd47:8513::9;
 allow 2a12:dd47:8513::a;
 allow 2a12:dd47:8513::b;
+allow 2a12:dd47:8513::c;
+allow 2a12:dd47:8513::d;
 allow 2a12:dd47:8513::e;
 allow 2a12:dd47:8513::f;
 allow 2a13:d207:0:461::1;
@@ -1788,6 +1789,7 @@ allow 45.83.104.137;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
+allow 45.94.31.180;
 allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.223;
@@ -1943,7 +1945,6 @@ allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.185.85.140;
 allow 89.187.143.31;
-allow 89.213.174.212;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.37.95.34;
