--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -520,6 +520,7 @@ deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 deny 2a0b:4140:c333::2;
+deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -672,7 +673,6 @@ deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:e701:1198::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
-deny 2a0f:9400:7e11:8ba1::1;
 deny 2a0f:ca80:0:e57f::82e1:3f1b;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
@@ -713,8 +713,6 @@ deny 2a12:a800:2:1:185:241:208:115;
 deny 2a12:a800:2:1:185:241:208:202;
 deny 2a12:a800:2:1:185:241:208:204;
 deny 2a12:a800:2:1:185:241:208:206;
-deny 2a12:a800:2:1:185:241:208:232;
-deny 2a12:a800:2:1:185:241:208:236;
 deny 2a12:a800:2:1:185:241:208:243;
 deny 2a12:a800:2:1:185:241:208:71;
 deny 2a12:a800:2:1:185:241:208:81;
@@ -772,6 +770,8 @@ deny 2a12:dd47:8513::8;
 deny 2a12:dd47:8513::9;
 deny 2a12:dd47:8513::a;
 deny 2a12:dd47:8513::b;
+deny 2a12:dd47:8513::c;
+deny 2a12:dd47:8513::d;
 deny 2a12:dd47:8513::e;
 deny 2a12:dd47:8513::f;
 deny 2a13:d207:0:461::1;
