Update lists at 20241104-1801

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -133,6 +133,7 @@ allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fa4f:202:6f2a:368a:9f7:e371:3ba5;
+allow 2602:fc24:12:3f11:39ca:318:0:1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -410,6 +411,7 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -430,7 +432,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:6f8:2020:206:b::155;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -649,6 +650,21 @@ allow 2a0b:f4c2:3::87;
 allow 2a0b:f4c2:3::88;
 allow 2a0b:f4c2:3::89;
 allow 2a0b:f4c2:3::90;
+allow 2a0b:f4c2:4::100;
+allow 2a0b:f4c2:4::101;
+allow 2a0b:f4c2:4::102;
+allow 2a0b:f4c2:4::103;
+allow 2a0b:f4c2:4::104;
+allow 2a0b:f4c2:4::105;
+allow 2a0b:f4c2:4::106;
+allow 2a0b:f4c2:4::107;
+allow 2a0b:f4c2:4::108;
+allow 2a0b:f4c2:4::109;
+allow 2a0b:f4c2:4::110;
+allow 2a0b:f4c2:4::96;
+allow 2a0b:f4c2:4::97;
+allow 2a0b:f4c2:4::98;
+allow 2a0b:f4c2:4::99;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
@@ -666,7 +682,6 @@ allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:4005:1002:ffff:185:40:4:94;
 allow 2a0e:4005:1002:ffff:185:40:4:95;
-allow 2a0e:97c0:3e3:50b::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:b107:dd0::3:fa35:9316;
@@ -713,7 +728,6 @@ allow 2a12:a800:2:1:185:241:208:115;
 allow 2a12:a800:2:1:185:241:208:202;
 allow 2a12:a800:2:1:185:241:208:204;
 allow 2a12:a800:2:1:185:241:208:206;
-allow 2a12:a800:2:1:185:241:208:243;
 allow 2a12:a800:2:1:185:241:208:71;
 allow 2a12:a800:2:1:185:241:208:81;
 allow 2a12:a800:2:1:45:138:16:107;
