--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -354,6 +354,17 @@ set_real_ip_from 185.220.100.252;
 set_real_ip_from 185.220.100.253;
 set_real_ip_from 185.220.100.254;
 set_real_ip_from 185.220.100.255;
+set_real_ip_from 185.220.101.100;
+set_real_ip_from 185.220.101.101;
+set_real_ip_from 185.220.101.102;
+set_real_ip_from 185.220.101.103;
+set_real_ip_from 185.220.101.104;
+set_real_ip_from 185.220.101.105;
+set_real_ip_from 185.220.101.106;
+set_real_ip_from 185.220.101.107;
+set_real_ip_from 185.220.101.108;
+set_real_ip_from 185.220.101.109;
+set_real_ip_from 185.220.101.110;
 set_real_ip_from 185.220.101.128;
 set_real_ip_from 185.220.101.129;
 set_real_ip_from 185.220.101.130;
@@ -468,6 +479,10 @@ set_real_ip_from 185.220.101.87;
 set_real_ip_from 185.220.101.88;
 set_real_ip_from 185.220.101.89;
 set_real_ip_from 185.220.101.90;
+set_real_ip_from 185.220.101.96;
+set_real_ip_from 185.220.101.97;
+set_real_ip_from 185.220.101.98;
+set_real_ip_from 185.220.101.99;
 set_real_ip_from 185.220.103.4;
 set_real_ip_from 185.220.103.5;
 set_real_ip_from 185.220.103.6;
@@ -485,7 +500,6 @@ set_real_ip_from 185.241.208.196;
 set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
 set_real_ip_from 185.241.208.206;
-set_real_ip_from 185.241.208.243;
 set_real_ip_from 185.241.208.54;
 set_real_ip_from 185.241.208.71;
 set_real_ip_from 185.241.208.81;
@@ -646,7 +660,6 @@ set_real_ip_from 195.47.238.87;
 set_real_ip_from 195.47.238.88;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
-set_real_ip_from 198.167.206.155;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -988,6 +1001,7 @@ set_real_ip_from 23.129.64.228;
 set_real_ip_from 23.129.64.229;
 set_real_ip_from 23.129.64.230;
 set_real_ip_from 23.137.248.100;
+set_real_ip_from 23.137.248.149;
 set_real_ip_from 23.137.248.152;
 set_real_ip_from 23.137.250.83;
 set_real_ip_from 23.137.253.108;
@@ -1059,6 +1073,7 @@ set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:fa4f:202:6f2a:368a:9f7:e371:3ba5;
+set_real_ip_from 2602:fc24:12:3f11:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:4870:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
@@ -1337,6 +1352,7 @@ set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
+set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
@@ -1357,7 +1373,6 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
-set_real_ip_from 2a02:6f8:2020:206:b::155;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2195:2012::1;
@@ -1576,6 +1591,21 @@ set_real_ip_from 2a0b:f4c2:3::87;
 set_real_ip_from 2a0b:f4c2:3::88;
 set_real_ip_from 2a0b:f4c2:3::89;
 set_real_ip_from 2a0b:f4c2:3::90;
+set_real_ip_from 2a0b:f4c2:4::100;
+set_real_ip_from 2a0b:f4c2:4::101;
+set_real_ip_from 2a0b:f4c2:4::102;
+set_real_ip_from 2a0b:f4c2:4::103;
+set_real_ip_from 2a0b:f4c2:4::104;
+set_real_ip_from 2a0b:f4c2:4::105;
+set_real_ip_from 2a0b:f4c2:4::106;
+set_real_ip_from 2a0b:f4c2:4::107;
+set_real_ip_from 2a0b:f4c2:4::108;
+set_real_ip_from 2a0b:f4c2:4::109;
+set_real_ip_from 2a0b:f4c2:4::110;
+set_real_ip_from 2a0b:f4c2:4::96;
+set_real_ip_from 2a0b:f4c2:4::97;
+set_real_ip_from 2a0b:f4c2:4::98;
+set_real_ip_from 2a0b:f4c2:4::99;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1593,7 +1623,6 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:64;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:92;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:94;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:95;
-set_real_ip_from 2a0e:97c0:3e3:50b::1;
 set_real_ip_from 2a0e:97c0:3ea:bc::1;
 set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
@@ -1640,7 +1669,6 @@ set_real_ip_from 2a12:a800:2:1:185:241:208:115;
 set_real_ip_from 2a12:a800:2:1:185:241:208:202;
 set_real_ip_from 2a12:a800:2:1:185:241:208:204;
 set_real_ip_from 2a12:a800:2:1:185:241:208:206;
-set_real_ip_from 2a12:a800:2:1:185:241:208:243;
 set_real_ip_from 2a12:a800:2:1:185:241:208:71;
 set_real_ip_from 2a12:a800:2:1:185:241:208:81;
 set_real_ip_from 2a12:a800:2:1:45:138:16:107;
@@ -1718,7 +1746,6 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.6.224.183;
-set_real_ip_from 45.11.229.132;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1727,7 +1754,6 @@ set_real_ip_from 45.129.84.246;
 set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
-set_real_ip_from 45.135.180.27;
 set_real_ip_from 45.137.205.138;
 set_real_ip_from 45.137.205.140;
 set_real_ip_from 45.138.16.107;
@@ -1933,6 +1959,7 @@ set_real_ip_from 87.118.116.12;
 set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
+set_real_ip_from 87.120.254.132;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
